0.6.10/_sources/reference/generated/spectrochempy.Optimize.rst
spectrochempy.Optimize
======================

.. currentmodule:: spectrochempy


.. autoclass:: Optimize

   

   
   
   .. rubric:: Attributes Summary


   .. autosummary::
   
      ~Optimize.X
      ~Optimize.Y
      ~Optimize.amplitude_mode
      ~Optimize.autoampl
      ~Optimize.autobase
      ~Optimize.callback_every
      ~Optimize.components
      ~Optimize.config
      ~Optimize.constraints
      ~Optimize.dry
      ~Optimize.fp
      ~Optimize.log
      ~Optimize.max_fun_calls
      ~Optimize.max_iter
      ~Optimize.method
      ~Optimize.modeldata
      ~Optimize.n_components
      ~Optimize.name
      ~Optimize.script
      ~Optimize.usermodels
   
   

   
   
   .. rubric:: Methods Summary


   .. autosummary::
   
      ~Optimize.fit
      ~Optimize.fit_transform
      ~Optimize.get_components
      ~Optimize.inverse_transform
      ~Optimize.parameters
      ~Optimize.params
      ~Optimize.plotmerit
      ~Optimize.predict
      ~Optimize.reconstruct
      ~Optimize.reduce
      ~Optimize.reset
      ~Optimize.to_dict
      ~Optimize.transform

   
   

   
   
   .. rubric:: Attributes Documentation

   
   .. autoattribute:: X
   .. autoattribute:: Y
   .. autoattribute:: amplitude_mode
   .. autoattribute:: autoampl
   .. autoattribute:: autobase
   .. autoattribute:: callback_every
   .. autoattribute:: components
   .. autoattribute:: config
   .. autoattribute:: constraints
   .. autoattribute:: dry
   .. autoattribute:: fp
   .. autoattribute:: log
   .. autoattribute:: max_fun_calls
   .. autoattribute:: max_iter
   .. autoattribute:: method
   .. autoattribute:: modeldata
   .. autoattribute:: n_components
   .. autoattribute:: name
   .. autoattribute:: script
   .. autoattribute:: usermodels
   
   

   
   
   .. rubric:: Methods Documentation

   
   .. automethod:: fit
   .. automethod:: fit_transform
   .. automethod:: get_components
   .. automethod:: inverse_transform
   .. automethod:: parameters
   .. automethod:: params
   .. automethod:: plotmerit
   .. automethod:: predict
   .. automethod:: reconstruct
   .. automethod:: reduce
   .. automethod:: reset
   .. automethod:: to_dict
   .. automethod:: transform
   
   


.. rubric:: Examples using spectrochempy.Optimize
.. _sphx_glr_backref_spectrochempy.Optimize:

.. minigallery:: spectrochempy.Optimize