0.12.6/_sources/reference/generated/spectrochempy.Optimize.rst
spectrochempy.Optimize
======================

.. currentmodule:: spectrochempy

.. autoclass:: Optimize

   

   
   
   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~Optimize.X
      ~Optimize.Y
      ~Optimize.amplitude_mode
      ~Optimize.autoampl
      ~Optimize.autobase
      ~Optimize.callback_every
      ~Optimize.components
      ~Optimize.config
      ~Optimize.constraints
      ~Optimize.dry
      ~Optimize.fp
      ~Optimize.jacobian
      ~Optimize.log
      ~Optimize.max_fun_calls
      ~Optimize.max_iter
      ~Optimize.method
      ~Optimize.modeldata
      ~Optimize.n_components
      ~Optimize.name
      ~Optimize.result
      ~Optimize.script
      ~Optimize.usermodels
   
   

   
   
   .. rubric:: Methods Summary

   .. autosummary::
   
      ~Optimize.fit
      ~Optimize.fit_transform
      ~Optimize.get_components
      ~Optimize.get_params
      ~Optimize.inverse_transform
      ~Optimize.params
      ~Optimize.plot_merit
      ~Optimize.plotmerit
      ~Optimize.predict
      ~Optimize.reset
      ~Optimize.set_params
      ~Optimize.to_dict
      ~Optimize.transform
      ~Optimize.validate_constraints
      ~Optimize.validate_script

   
   

   
   
   .. rubric:: Attributes Documentation

   
   .. autoattribute:: X
   .. autoattribute:: Y
   .. autoattribute:: amplitude_mode
   .. autoattribute:: autoampl
   .. autoattribute:: autobase
   .. autoattribute:: callback_every
   .. autoattribute:: components
   .. autoattribute:: config
   .. autoattribute:: constraints
   .. autoattribute:: dry
   .. autoattribute:: fp
   .. autoattribute:: jacobian
   .. autoattribute:: log
   .. autoattribute:: max_fun_calls
   .. autoattribute:: max_iter
   .. autoattribute:: method
   .. autoattribute:: modeldata
   .. autoattribute:: n_components
   .. autoattribute:: name
   .. autoattribute:: result
   .. autoattribute:: script
   .. autoattribute:: usermodels
   
   

   
   
   .. rubric:: Methods Documentation

   
   .. automethod:: fit
   .. automethod:: fit_transform
   .. automethod:: get_components
   .. automethod:: get_params
   .. automethod:: inverse_transform
   .. automethod:: params
   .. automethod:: plot_merit
   .. automethod:: plotmerit
   .. automethod:: predict
   .. automethod:: reset
   .. automethod:: set_params
   .. automethod:: to_dict
   .. automethod:: transform
   .. automethod:: validate_constraints
   .. automethod:: validate_script
   
   

.. rubric:: Examples using spectrochempy.Optimize
.. _sphx_glr_backref_spectrochempy.Optimize:

.. minigallery:: spectrochempy.Optimize